tests/toylang/neg/000650_mutation.toylang
program a = { a = a == var a; } .
